--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,34 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Simplest Firebase app ever
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <form [formGroup]="simple" (keyup.enter)="submit()">
+    <ion-item>
+      <ion-label position="stacked">Enter some text, hit enter to submit:</ion-label>
+      <ion-input
+        formControlName="text"
+        type="text"
+        placeholder="type here"
+      ></ion-input>
+    </ion-item>
+    <ion-button (click)="submit()">
+      Submit
+    </ion-button>
+  </form>
+
+  <ion-list>
+    <ion-list-header>
+      Database entries: {{numEntries}}
+    </ion-list-header>
+    <ion-item *ngFor="let entry of getAllResults()">
+      {{entry}}
+      <ion-icon slot="end" name="close-circle" (click)="remove(entry)"></ion-icon>
+    </ion-item>
+  </ion-list>
 </ion-content>
+
